Research changed to "Re-search"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="backsearch">Go back to Search</string>
     <string name="sss">Advance Searching</string>
     <string name="submit">Submit</string>
-    <string name="backtoresearch">Go Back To Research</string>
+    <string name="backtoresearch">Go Back To Re-search</string>
     <string name="usefulweb">Useful Website</string>
 
     <string-array name="categoryspinner">
